# portal

./: .pre-commit-config.yaml  Makefile  justfile
cmd/demo-app/: main_test.go
cmd/portal-tunnel/: main.go  main_test.go
cmd/relay-server/: admin.go  frontend.go  main.go  serve.go  serve_http_test.go  tunnel.go  tunnel_test.go
cmd/vanity-id/: main_test.go
cmd/webclient/: http_client_std_js.go  http_client_tinygo_js.go  index.html  main_js.go  polyfill.min.js  service-worker.js
docs/adr/: 0001-adopt-webtransport-for-relay-transport.md  0002-use-noise-protocol-for-e2e-encryption.md  0003-define-transport-agnostic-session-stream-interfaces.md  0004-use-x25519-credentials-with-hmac-derived-identity.md  0005-use-vtprotobuf-for-protocol-serialization.md  0006-serve-dual-protocols-from-single-binary.md  0007-remove-wasm-webclient.md  0008-enforce-pure-go-with-cgo-disabled.md  0009-use-time-limited-leases-for-service-discovery.md  0010-embed-react-spa-via-go-embed.md
portal/: client.go  handlers.go  helper.go  integration_test.go  lease.go  lease_adversarial_test.go  lease_test.go  relay.go  relay_adversarial_test.go  relay_test.go  transport_pipe_adversarial_test.go  transport_pipe_test.go
sdk/: sdk.go  sdk_adversarial_test.go  sdk_e2e_test.go  sdk_test.go  types_test.go
sdk/rust/: .gitignore  Cargo.toml  README.md  build.rs
sdk/rust/examples/: dialer.rs  listener.rs
sdk/rust/src/: client.rs  config.rs  connection.rs  credential.rs  error.rs  handshaker.rs  lib.rs  listener.rs  metadata.rs  relay.rs  validation.rs  ws_adapter.rs  yamux_adapter.rs
sdk/rust/src/proto/: mod.rs  rdsec.rs  rdverb.rs
utils/: http.go  http_lookup.go  http_lookup_js.go  url.go  utils_test.go  ws.go  ws_js.go
(+12 files in other folders)
